# trigrep

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
scripts/: bump-version.sh
trigrep-cli/: Cargo.toml
trigrep-cli/src/: cmd_index.rs  cmd_search.rs  cmd_status.rs  main.rs  output.rs  regex_decompose.rs
trigrep-index/: Cargo.toml
