[package]
name = "trigrep-cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "trigrep"
path = "src/main.rs"

[dependencies]
trigrep-index = { path = "../trigrep-index" }
clap = { version = "4", features = ["derive"] }
regex = "1"
regex-syntax = "0.8"
anyhow = "1"
colored = "2"
rayon = "1"
atty = "0.2"
